# oop-summer-25

OOP/OOP/: CMakeLists.txt  TramSimulatorOOP.cpp  TramSimulatorOOP.h
OOP/OOP/src/depots/: Depot.h
OOP/OOP/src/trafficManager/: TrafficManager.cpp
OOP/OOP/src/tramLines/: Timetable.cpp  Timetable.h
OOP/src/depots/: Depot.cpp
OOP/src/trafficManager/: TrafficManager.h
OOP/src/tramStops/: TramStop.cpp  TramStop.h
OOP/src/trams/: Tram.cpp  Tram.h  TramModels.cpp  TramModels.h
